blue/nginx_php-fpm_multicontainer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: blue
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: nginx
        image: hiakki/my-nginx
        volumeMounts:
        - mountPath: /var/log/nginx/
          name: logs
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
      - name: php-fpm
        image: hiakki/my-php
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 10m
      volumes:
      - name: logs
        hostPath:
          path: /home/kube/logs
