blue/nginx_php-fpm_multicontainer_service.yaml
apiVersion: v1
kind: Service              
metadata:
  name: blue
spec:
  externalIPs:
  - masterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blue
