blue/nginx_php-fpm_multicontainer_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blue
spec:
  backend:
    serviceName: blue
    servicePort: 80
